// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SecondarySidebarSection > should not have border if it is the last section 1`] = `
<div>
  <div
    class="flex flex-col gap-4 py-4 px-2"
  >
    SecondarySidebarSection
  </div>
</div>
`;

exports[`SecondarySidebarSection > should render without crashing 1`] = `
<div>
  <div
    class="flex flex-col gap-4 py-4 px-2 border-b dark:border-zinc-50/10"
  >
    SecondarySidebarSection
  </div>
</div>
`;
